# png-convolution

./: .clang-format  .gitignore  README.md  compile_commands.json  env.nu  meson.build  proj
src/: Kernel.h  PNG.h  args.cpp  args.h  main.cpp
src/image/: BMPImage.cpp  BMPImage.h  Pixel.cpp  Pixel.h  headers.h
src/kernel/: Kernel.h  PixelWindow.h  StaticMatrix.h
src/utils/: exceptions.h  utils.cpp  utils.h
